# ChangeLog for Gentoo Linux Installer
# Copyright 2005-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.672 2006/08/31 15:34:59 agaffney Exp $

  31 Aug 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIArchitectureTemplate.py:
  pass quotes_around_value=False when adding default route to conf.d/net

  7 Aug 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIArchitectureTemplate.py:
  copy backup custom.conf from livecd if present

*GLI-0.4 (31 Jul 2006)

  31 Jul 2006; Chris Gianelloni <wolf31o2@gentoo.org> bin/installer:
  Finally properly fixing the installer script. Thanks to Andrew Gaffney for
  doing the testing and coming up with the patch.

  29 Jul 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIArchitectureTemplate.py:
  skip blank entries/files in update_config_files()

  28 Jul 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/templates/x86ArchitectureTemplate.py:
  move logical clipping logic a bit

  27 Jul 2006; Chris Gianelloni <wolf31o2@gentoo.org> bin/installer:
  I've commented out most of the code that used launch. It wasn't working and
  we don't have the time to fix it before the release. I'll look into it after
  the release and make it more robust and flexible.

  27 Jul 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/templates/x86ArchitectureTemplate.py:
  clip logical partition at end of extended

  20 Jul 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  src/GLIInstallProfile.py:
  Added a few more applications to the list of extra packages to be merged,
  all from various GRP sets.

  19 Jul 2006; Chris Gianelloni <wolf31o2@gentoo.org> bin/installer:
  Added launch variable to the end of each try-run with auth, which should
  cause this to function properly. Of course, more testing is needed.

  19 Jul 2006; Chris Gianelloni <wolf31o2@gentoo.org> bin/installer:
  Fix a missed space in the installer script.

  30 Jul 2006; Preston Cody <codeman@gentoo.org>: