@@ -1,6 +1,11 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.672 2006/08/31 15:34:59 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.673 2006/09/01 22:04:25 agaffney Exp $
+
+  1 Sep 2006; Andrew Gaffney <agaffney@gentoo.org>
+  src/templates/ppcArchitectureTemplate.py:
+  this doesn't need to inherit from x86AT or create an infinite loop by calling
+  its own __init__()
 
   31 Aug 2006; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIArchitectureTemplate.py:
